fix overflow on safari

--- a/src/containers/room/components/ceremony/ceremony.scss
+++ b/src/containers/room/components/ceremony/ceremony.scss
@@ -6,6 +6,7 @@
   height: 100%;
   padding: 0.5rem;
   overflow: auto;
+  -webkit-overflow-scrolling: touch;
   overflow-x: hidden;
   scroll-snap-type: y mandatory;
   scroll-snap-align: start;
